--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,11 @@ dependencies {
 
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
 	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
+
+	// *** JsonWebToken *** //
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 }
 tasks.named('test') {
 	useJUnitPlatform()
