--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10" //Querydsl 설정
 	id 'java'
 	id 'jacoco' // test coverage 를 위한 jacoco
+	id "org.asciidoctor.convert" version "1.5.9.2" // AsciiDoc 파일을 컨버팅하고 Build 폴더에 복사하기 위한 플러그인
 }
 
 group = 'com.server'
@@ -56,6 +57,10 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
+	asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
 }
 tasks.named('test') {
 	useJUnitPlatform()
@@ -126,4 +131,31 @@ sourceSets {
 
 compileQuerydsl {
 	options.annotationProcessorPath = configurations.querydsl
+}
+
+ext {
+	snippetsDir = file('build/generated-snippets')
+}
+
+asciidoctor {
+	inputs.dir snippetsDir
+	dependsOn test
+}
+
+bootJar {
+	dependsOn asciidoctor
+	from ("${asciidoctor.outputDir}/html5/") {
+		into 'static/docs'
+	}
+}
+
+task copyDocument(type: Copy) {
+	dependsOn asciidoctor
+
+	from file("build/asciidoc/html5/")
+	into file("src/main/resources/static/docs")
+}
+
+build {
+	dependsOn copyDocument
 }
