--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 	asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
+	compile 'io.github.kilmajster:ngrok-spring-boot-starter:0.6.0'
 }
 tasks.named('test') {
 	useJUnitPlatform()
